# mcp_server

./: .env.example  .gitignore  1_start_server.sh  1_Запустить_Сервер.bat  2_start_inspector.sh  2_Запустить_Инспектор.bat  DEMO.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  init-db.sql  presentation_for_jury.md  presentation_slides.md  pyproject.toml  requirements.txt  run_stdio.py
demo_project/: docker-compose.yml
src/devboost/: __init__.py  server.py
src/devboost/core/: __init__.py  config.py  errors.py
src/devboost/services/: db_client.py  sys_process.py
src/devboost/tools/: __init__.py  db_profiler.py  env_doctor.py
